crates/aranya-policy-compiler/tests/data/actions/non_unit_success.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: unknown error
  |
2 | action bad() result[string, string] {
  |                     ^^^^^^ an action's success type must be `unit` (use `int` placeholder)
